--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ version: '3.8'
 
 services:
   web:
-    build: 
-      context: .
-      dockerfile: Dockerfile
+    build: .
     ports:
       - "80:80"
     depends_on:
@@ -29,9 +27,7 @@ services:
     restart: unless-stopped
 
   backend:
-    build: 
-      context: ./backend
-      dockerfile: Dockerfile
+    build: ./backend
     ports:
       - "3001:3001"
     environment:
