--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -3,7 +3,8 @@ version: '3.8'
 services:
   web:
     build: .
-    # Removed ports directive - Coolify handles port forwarding automatically
+    ports:
+      - "80:80"
     depends_on:
       - db
     networks:
@@ -13,10 +14,11 @@ services:
   db:
     image: postgres:15-alpine
     environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    # Removed ports directive - Coolify handles port forwarding automatically
+      POSTGRES_DB: iacovici_db
+      POSTGRES_USER: iacovici_user
+      POSTGRES_PASSWORD: secure_password_change_in_production
+    ports:
+      - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./schema.sql:/docker-entrypoint-initdb.d/schema.sql
@@ -26,14 +28,15 @@ services:
 
   backend:
     build: ./backend
-    # Removed ports directive - Coolify handles port forwarding automatically
+    ports:
+      - "3001:3001"
     environment:
       POSTGRES_HOST: db
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: iacovici_db
+      POSTGRES_USER: iacovici_user
+      POSTGRES_PASSWORD: secure_password_change_in_production
       POSTGRES_PORT: 5432
-      JWT_SECRET: ${JWT_SECRET}
+      JWT_SECRET: your_jwt_secret_key_change_in_production
       BACKEND_PORT: 3001
     depends_on:
       - db
