--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     restart: unless-stopped
 
   db:
+    container_name: db
     image: postgres:15-alpine
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
