--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -12,6 +12,7 @@ services:
     restart: unless-stopped
 
   db:
+    container_name: db
     image: postgres:15-alpine
     environment:
       POSTGRES_DB: iacovici_db
