--- a/.env.example
+++ b/.env.example
@@ -2,28 +2,43 @@
 POSTGRES_DB=iacovici_db
 POSTGRES_USER=iacovici_user
 POSTGRES_PASSWORD=change_this_secure_password
+POSTGRES_PORT=5432
 
-# React App Configuration
-REACT_APP_API_URL=http://localhost:3001/api
-REACT_APP_SITE_URL=https://iacovici.it
+# Frontend Configuration
+# Set this to your Coolify backend URL: https://your-backend-service.coolify.app/api
+REACT_APP_API_URL=https://your-backend-service.coolify.app/api
+# Set this to your Coolify frontend URL: https://your-frontend-service.coolify.app
+REACT_APP_SITE_URL=https://your-frontend-service.coolify.app
+# This should be the same as REACT_APP_SITE_URL for redirects
+FRONTEND_URL=https://your-frontend-service.coolify.app
 
 # Stripe Configuration (for pro template sales)
 REACT_APP_STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 
-# Email Service Configuration (for contact forms)
-EMAIL_SERVICE_API_KEY=your_email_service_api_key
-EMAIL_FROM_ADDRESS=contact@iacovici.it
-EMAIL_TO_ADDRESS=iacovici95@gmail.com
+# JWT Configuration
+JWT_SECRET=your_jwt_secret_key_change_in_production
+
+# Email Service Configuration (for contact forms and notifications)
+EMAIL_FROM_ADDRESS=no-reply@iacovici.it
+SMTP_HOST=your.smtp.server.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your_smtp_username
+SMTP_PASS=your_smtp_password
+
+# Backend Configuration
+BACKEND_PORT=3001
 
 # Optional: Analytics
 GOOGLE_ANALYTICS_ID=GA-XXXXX-X
+REACT_APP_GOOGLE_ANALYTICS_ID=GA-XXXXX-X
 
 # Optional: Social Media Links
 SOCIAL_TELEGRAM=https://t.me/iacovici
 SOCIAL_GITHUB=https://github.com/iacovici
 SOCIAL_LINKEDIN=https://linkedin.com/in/iacovici
-
-# Development Settings
-NODE_ENV=production
-PORT=3000
+REACT_APP_SOCIAL_TELEGRAM=https://t.me/iacovici
+REACT_APP_SOCIAL_GITHUB=https://github.com/iacovici
+REACT_APP_SOCIAL_LINKEDIN=https://linkedin.com/in/iacovici
