--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # API proxy for backend requests (when backend is implemented)
+    # API proxy for backend requests - only if backend is available
     location /api/ {
         proxy_pass http://backend:3001;
         proxy_http_version 1.1;
@@ -30,6 +30,11 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        proxy_connect_timeout 5s;
+        proxy_send_timeout 5s;
+        proxy_read_timeout 5s;
+        # Handle backend unavailable gracefully
+        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
     }
 
     # Security headers
