--- a/nginx.conf
+++ b/nginx.conf
@@ -14,6 +14,13 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
+    # Health check endpoint for Docker
+    location /health {
+        access_log off;
+        return 200 "healthy\n";
+        add_header Content-Type text/plain;
+    }
+
     # Handle React Router (SPA routing)
     location / {
         try_files $uri $uri/ /index.html;
