--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,42 @@
 services:
-  web:
-    build: .
+  # Database reset service - runs on every deployment to recreate DB
+  db-reset:
+    image: 'postgres:15-alpine'
     environment:
-      - SERVICE_FQDN_WEB_80
-      - 'REACT_APP_API_URL=${SERVICE_FQDN_BACKEND}/api'
-      - 'REACT_APP_SITE_URL=${SERVICE_FQDN_WEB}'
-      - 'REACT_APP_STRIPE_PUBLISHABLE_KEY=${REACT_APP_STRIPE_PUBLISHABLE_KEY}'
-      - 'REACT_APP_GOOGLE_ANALYTICS_ID=${REACT_APP_GOOGLE_ANALYTICS_ID}'
-      - 'REACT_APP_SOCIAL_TELEGRAM=${REACT_APP_SOCIAL_TELEGRAM}'
+      - 'POSTGRES_USER=${POSTGRES_USER}'
+      - 'POSTGRES_PASSWORD=${POSTGRES_PASSWORD}'
+      - 'POSTGRES_DB=${POSTGRES_DB}'
       - 'REACT_APP_SOCIAL_GITHUB=${REACT_APP_SOCIAL_GITHUB}'
       - 'REACT_APP_SOCIAL_LINKEDIN=${REACT_APP_SOCIAL_LINKEDIN}'
+      - 'REACT_APP_SOCIAL_TELEGRAM=${REACT_APP_SOCIAL_TELEGRAM}'
+      - 'SERVICE_FQDN_WEB=${SERVICE_FQDN_WEB}'
+    volumes:
+      - './reset-db.sh:/app/reset-db.sh:ro'
+      - './reset-database.sql:/app/reset-database.sql:ro'
+    command: ["/bin/sh", "/app/reset-db.sh"]
     depends_on:
       postgres:
         condition: service_healthy
+    restart: "no"
+
+  web:
+    build:
+      context: .
+      args:
+        - 'REACT_APP_API_URL=${SERVICE_FQDN_BACKEND}/api'
+        - 'REACT_APP_SITE_URL=${SERVICE_FQDN_WEB}'
+        - 'REACT_APP_STRIPE_PUBLISHABLE_KEY=${REACT_APP_STRIPE_PUBLISHABLE_KEY}'
+        - 'REACT_APP_GOOGLE_ANALYTICS_ID=${REACT_APP_GOOGLE_ANALYTICS_ID}'
+        - 'REACT_APP_SOCIAL_TELEGRAM=${REACT_APP_SOCIAL_TELEGRAM}'
+        - 'REACT_APP_SOCIAL_GITHUB=${REACT_APP_SOCIAL_GITHUB}'
+        - 'REACT_APP_SOCIAL_LINKEDIN=${REACT_APP_SOCIAL_LINKEDIN}'
+    environment:
+      - SERVICE_FQDN_WEB_80
+    depends_on:
+      postgres:
+        condition: service_healthy
+      db-reset:
+        condition: service_completed_successfully
     healthcheck:
       test:
         - CMD-SHELL
@@ -46,6 +70,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+      db-reset:
+        condition: service_completed_successfully
     healthcheck:
       test:
         - CMD-SHELL
@@ -64,7 +90,6 @@ services:
       - "5433:5432"
     volumes:
       - 'iacovici_postgresql_data_v2:/var/lib/postgresql/data'
-      - './schema.sql:/docker-entrypoint-initdb.d/01-schema.sql'
     healthcheck:
       test:
         - CMD-SHELL
