--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,4 @@
 services:
-  # Database reset service - runs on every deployment to recreate DB
-  db-reset:
-    image: 'postgres:15-alpine'
-    environment:
-      - 'POSTGRES_USER=${POSTGRES_USER}'
-      - 'POSTGRES_PASSWORD=${POSTGRES_PASSWORD}'
-      - 'POSTGRES_DB=${POSTGRES_DB}'
-      - 'REACT_APP_SOCIAL_GITHUB=${REACT_APP_SOCIAL_GITHUB}'
-      - 'REACT_APP_SOCIAL_LINKEDIN=${REACT_APP_SOCIAL_LINKEDIN}'
-      - 'REACT_APP_SOCIAL_TELEGRAM=${REACT_APP_SOCIAL_TELEGRAM}'
-      - 'SERVICE_FQDN_WEB=${SERVICE_FQDN_WEB}'
-    volumes:
-      - './reset-db.sh:/app/reset-db.sh:ro'
-      - './reset-database.sql:/app/reset-database.sql:ro'
-    command: ["/bin/sh", "/app/reset-db.sh"]
-    depends_on:
-      postgres:
-        condition: service_healthy
-    restart: "no"
-
   web:
     build:
       context: .
@@ -35,8 +15,6 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-      db-reset:
-        condition: service_completed_successfully
     healthcheck:
       test:
         - CMD-SHELL
@@ -70,8 +48,6 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-      db-reset:
-        condition: service_completed_successfully
     healthcheck:
       test:
         - CMD-SHELL
@@ -90,6 +66,7 @@ services:
       - "5433:5432"
     volumes:
       - 'iacovici_postgresql_data_v2:/var/lib/postgresql/data'
+      - './schema.sql:/docker-entrypoint-initdb.d/01-schema.sql'
     healthcheck:
       test:
         - CMD-SHELL
